# azure-blob-service-principal-test

./: Cargo.toml
src/: main.rs
